# yadro_kvadra_os_team_4_test

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/media_scanner/: config.hpp  file_writer.hpp  http_server.hpp  json_builder.hpp  media_files.hpp  scanner.hpp
src/: file_writer.cpp  http_server.cpp  json_builder.cpp  main.cpp  scanner.cpp
tests/: CMakeLists.txt  test_file_writer.cpp  test_json_builder.cpp  test_scanner.cpp
